# pytv

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: python.yml  rust.yml
docs/: pytv-docs.tex  ref.bib
docs/sections/: acknowledgments.tex  ads.tex  architecture.tex  installation.tex  introduction.tex  limitations.tex  syntax.tex  tverilog.tex  usage.tex
examples/: D1.pytv  D1_preamble.py  test.pytv
src/: config.rs  convert.rs  inst.rs  lib.rs  main.rs
tverilog/: README.md  pyproject.toml
tverilog/native/: Cargo.toml  pyproject.toml
tverilog/native/src/: lib.rs
tverilog/tests/: test_generate.py
tverilog/tverilog/: __init__.py  _core.py  _errors.py  _runner.py  _types.py  api.py
