[package]
name = "pytv"
description = "Python Templated Verilog"
repository = "https://github.com/autohdw/pytv"
authors = ["Teddy van Jerry <me@teddy-van-jerry.org>"]
version = "0.2.0"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["verilog", "python", "template", "generation"]
categories = ["template-engine", "compilers", "development-tools"]
exclude = ["examples/*", "target/*", "Cargo.lock", ".github/*", ".vscode/*", ".DS_Store"]
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
utf8_slice = "1.0.0"
